[package]
name = "cargo-mtime"
version = "0.1.1"
edition = "2021"
author = "Tom Solberg <me@sbg.dev>"
repository = "https://github.com/tgolsson/cargo-mtime"
license = "MIT OR Apache-2.0"
description = "Simple tool to manage file mtime values in sandboxed compilation."

[dependencies]
async-trait = "0.1.83"
async-walkdir = "1.0.0"
color-eyre = "0.6.2"
filetime = "0.2.23"
futures = "0.3.30"
opendal = "0.50.2"
redis = { version = "0.27.6", features = ["tokio-comp"] }
sha256 = "1.5.0"
speedy = "0.8.7"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "io-std", "io-util", "sync", "macros", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
